--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
@@ -21,7 +23,12 @@
     "@angular/router": "~9.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+
+    "typescript": "~3.8.3",
+      "@angular/cli": "~9.1.0",
+    "@angular/compiler-cli": "~9.1.0"
+
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.0",
@@ -43,5 +50,10 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
+  },
+  
+  "engines": {
+    "node": "12.16.1",
+    "npm": "6.13.4"
   }
 }
